# python-project-51

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
page_loader_project/: __init__.py  page_loader.py
page_loader_project/scripts/: page_loader_script.py
page_loader_project/tests/: test_page_loader.py
page_loader_project/tests/fixtures/: expected_pic.html  pic.html
