[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Arrcontender <dramman4@gmail.com>"]
packages = [
    { include = 'page_loader_project'},
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
requests = "^2.28.1"
requests-mock = "^1.10.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page-loader = 'page_loader_project.scripts.page_loader_script:main'